--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GH_TOKEN=afbba067a74039019a79daa48c116ad54b8e8e2f
+export GH_TOKEN=afbba067a74039019a79daa48c116ad54b8e8e2f
+export GITHUB_TOKEN=afbba067a74039019a79daa48c116ad54b8e8e2f
