--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ deploy:
     branch: master
 - provider: pypi
   user: gauragos
-  password: '!12345GauravUl#'
+  password: "$PYPI_PASSWORD"
   repository: https://upload.pypi.org/legacy
   skip_cleanup: true
   on:
